--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,15 @@
+
+body {
+    font: 11px sans-serif;
+}
+
+.axis path,
+.axis line {
+    fill: none;
+    stroke: #000;
+    shape-rendering: crispEdges;
+}
+
 .dot {
     stroke: #000;
 }
@@ -7,5 +19,10 @@
     width: 90px;
     height: 50px;
     pointer-events: none;
-    background: white;
+    background-color: white;
+}
+
+.label {
+    fill: black;
+    font-size: 14px;
 }
