--- a/public/style.css
+++ b/public/style.css
@@ -30,6 +30,6 @@ body {
 .drop-list-container {
     display: flex;
     flex-direction: row;
-    width: 100%;
+    width: 900px;
     justify-content: space-around;
 }
